UI fixes Edited dark mode colors Conditional rendering of sign out and edit profile button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,11 +74,9 @@
 #userNotFoundMessage, #userExists, .invalidFields{
   color: red;
 }
-.button {
-  margin: 10px;
-}
+
 .button:hover {
-  background-color: #e99393;
+  
 }
 .buttonContainer {
   display: flex;
