--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,6 +39,7 @@ button, .button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 2px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -48,7 +49,9 @@ button, .button {
 }
 button:hover,.button:hover {
   border-color: #646cff;
+  background-color: #e99393;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -65,5 +68,17 @@ button:focus-visible {
   }
   button, .button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color:#646cff
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button, .button {
+    background-color: #fab331;
   }
 }
